Reorganize, move index text to intro blog post

--- a/_posts/2020-02-06-welcome.md
+++ b/_posts/2020-02-06-welcome.md
@@ -1,12 +1,7 @@
 ---
-title: About
-layout: content
-image: pencils-brushes-1043734-pxh.jpg
-# image: chalk-many-818111-pxh.jpg
-permalink: /about/
+layout: post
+title:  Welcome to Making Machine Learning Intelligible!
 ---
-_NOTE: Data Chefs is a work in progress. This is v0.1_
-
 
 In the past 10 years, the field of machine learning (ML) has exploded.  Many models that only top experts, spending months of work, could build can now be created by someone with a little coding experience by writing a few lines of code. And in the next few years, trends such as Auto ML may make some machine learning work even more accessible.
 
@@ -18,7 +13,4 @@ Making ML Intelligible is a [Makers All](https://makersall.org) project to pull 
 - For corporations, large nonprofits, and government agencies, help them build out an ecosystem across organizations so they can share knowledge, pool resources --  and also collectively work to smooth the learning curve from beginner to power user to data scientist
 - Using this ecosystem across organizations to connect large organizations to the community, so communities can also benefit. In doing so, lay the groundwork to help communities from Harlem to Harlan County [benefit from the explosion of wealth that will be created by machine learning and AI](https://toolkit.makersall.org)  over the next 20 years -- and develop a model that can be used for [other forms of emerging tech](https://toolkit.makersall.org/pages/70-civic/40-et-economy.html).
 
-Making ML Intelligible was developed by Anders Schneiderman, Makers All’s director. He is a sociologist turned techie, with over 30 years of experience as a developer, software project manager and adult tech trainer at labor unions, corporations, nonprofits, and government. He can be reached by email (aschneiderman a.t makersall do.t org) or Twitter (@raschneiderman).
-
-If you're interested in trying out Making ML Intelligible in your organization, please contact Anders at aschneiderman a.t makersall do.t org.
-
+Getting there is going to take a lot of work. Right now, the main goal of the site is to just consolidate some of my notes on the field and begin to sketch out some ideas.  Once I've gotten my feet wet, I'll start trying to figure out the first leg of this journey.
