Tweak resources, homepage blog format

--- a/_posts/2020-03-02-welcome.md
+++ b/_posts/2020-03-02-welcome.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  Welcome to Making Machine Learning Intelligible!
+title:  Welcome to Making Machine Learning Intelligible
+author: Anders Schneiderman
 ---
 
 In the past 10 years, the field of machine learning (ML) has exploded.  Many models that only top experts, spending months of work, could build can now be created by someone with a little coding experience by writing a few lines of code. And in the next few years, trends such as Auto ML may make some machine learning work even more accessible.
